[package]
name = "booktoki_captcha"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.19", features = ["vision"] }
# 推理使用 ndarray 后端
burn-ndarray = { version = "0.19", default-features = false, features = ["std", "simd"] }
# 训练使用 tch 后端
burn-tch = { version = "0.19", optional = true }

serde = { version = "1.0", features = ["derive"] }
image = "0.25"
log = "0.4"
env_logger = "0.11"
rand = "0.9"

[features]
default = []
training = ["burn-tch", "burn/train"]

[[bin]]
name = "train"
path = "src/bin/train.rs"
required-features = ["training"]

[[bin]]
name = "fix_data"
path = "src/bin/fix_data.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
panic = "abort"